--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
           <div class="col-sm-6 ourStory">
-            <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations
+            <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations
               and development.
               <br>
               <br>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets
