--- a/bedstuy.html
+++ b/bedstuy.html
@@ -48,9 +48,9 @@
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
-        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School, The Culinary Institute and other institutions.</p>
+        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School, The Culinary Institute and other institutions.</p>
         <hr>
-        <p>64,000 square feet</p>
+        <p>65,000 square feet</p>
         <hr>
         <p>44 furnished and unfurnished apartments</p>
         <hr>
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p class="extra-lower">With convenient access to Pratt, Parsons, The New School, and New York University, this 9 story, 65,000 square feet building presents a tremendous opportunity for singles, recent grads, and young families.</p>
+            <p class="extra-lower">With convenient access to Pratt, Parsons and The New School this 9 story, 65,000 square feet building presents a tremendous opportunity for singles, recent grads and young families.</p>
           </div>
         </div>
         <div class="row">
@@ -78,7 +78,7 @@
         <img src="img/Bed-Stuy-Render.png">
         <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces</p>
         <img class="img-circle" src="img/BedStuy/circle-min.jpg">
-        <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers, and young professionals.</p>
+        <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers and young professionals.</p>
       </div>
     </div>
   </div>
