--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         </a>
         <br>
         <p class="email-label">Maintenance and leasing inquiries:</p>
-        <a href="mailto:maintenance@springhousepartners.com">
+        <a class="longemail" href="mailto:maintenance@springhousepartners.com">
           <p><u>maintenance@springhousepartners.com</u></p>
         </a>
         <br>
@@ -63,7 +63,7 @@
           <p><u>info@springhousepartners.com</u></p>
         </a>
       </div>
-      <div class="offset-sm-1 col-sm-7">
+      <div class="offset-sm-1 col-sm-8">
         <div id="map"></div>
       </div>
     </div>
