--- a/index.html
+++ b/index.html
@@ -46,16 +46,9 @@
     <div class="row home-carousel">
       <div class="col-xs-12">
         <div id="home-carousel" class="carousel slide home-carousel-img" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          </ol>
           <div class="carousel-inner home-carousel-img" role="listbox">
             <div class="carousel-item active" id="firstSlide">
               <img src="img/Home-1.jpg" alt="Flatiron View">
-            </div>
-            <div class="carousel-item" id="secondSlide">
-              <img src="img/Home-2.jpg" alt="The Office">
             </div>
           </div>
         </div>
@@ -64,13 +57,10 @@
     <div class="row home-text">
       <hr class="subtitle-hr home-hr-fix">
       <div class="col-sm-6">
-        <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
-          development.
-        </p>
+        <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and development.</p>
       </div>
       <div class="col-sm-6">
-        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout
-          New York City and South Florida.</p>
+        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout New York City and South Florida.</p>
       </div>
       <!--<div class="col-sm-3">
         <p class="text-xs-left text-uppercase subtitle">Address</p>
@@ -137,11 +127,6 @@
           }, 1000);
       }
     );
-  </script>
-  <script>
-    $('#home-carousel').click(function() {
-      $('#home-carousel').carousel('next');
-    });
   </script>
 </body>
 
