--- a/irvingplace.html
+++ b/irvingplace.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/facade-min.jpg">
-            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels, and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods</p>
+            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods</p>
           </div>
         </div>
         <div class="row">
