--- a/williamsburg.html
+++ b/williamsburg.html
@@ -48,7 +48,7 @@
         <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
-        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing prosperity of East Williamsburg and its younger, “creative” class audience. The property features a prime location in a vibrant neighborhood, close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan. Moreover, many of the units can be easily converted into shared apartments, making them especially attractive to the young tenants.</p>
+        <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing prosperity of East Williamsburg and its younger, “creative” class audience. The property features a prime location in a vibrant neighborhood, close proximity to public transit and a range of on-site amenities such as a gym, game room and a massive rooftop deck with skyline views of Manhattan. Moreover, many of the units can be easily converted into shared apartments, making them especially attractive to the young tenants.</p>
         <hr>
         <p>32 loft-style apartments</p>
         <hr>
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/A-min.jpg" alt="">
-            <p>A range of amenities – including a game room, full gym, and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
+            <p>A range of amenities – including a game room, full gym and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
         </div>
       </div>
