--- a/press.html
+++ b/press.html
@@ -99,7 +99,7 @@
         <hr>
         <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
         <hr>
-        <p>Ariel Property Advisors has announced the sale of 2070 &amp; 2074 Arthur Avenue, a pair of contiguous multifamily properties in the Tremont section of the Bronx. The properties sold for $7,365,000. Exclusive agents Victor Sozio, Scot Hirschfeld, Jason M. Gold and Marko Agbaba represented the owner, King Penguin Opportunity Fund, and procured the buyer...</p>
+        <p>More than 200 real estate professionals attended Ariel Property Advisors' panel presentation on Value-Added Opportunities in the NYC Multifamily Market at the recent NYC Real Estate Expo. Close to 3,000 individuals attended this year's expo, which was held on October 18 at Columbia University...</p>
         <a href="ARIEL.PDF" target="_blank">
           <p><u>Read more ></u></p>
         </a>
