--- a/press.html
+++ b/press.html
@@ -97,7 +97,7 @@
         <hr>
         <img class="press-logo" src="img/ArielPropertyAdvisorsLogo.png">
         <hr>
-        <h1 class="text-xs-center quote-sm">Adam Verner speaks on real estate investment panel at Columbia University</h1>
+        <h1 class="text-xs-center quote-sm">Ariel Property Advisors presents panel on Value-Added Opportunities</h1>
         <hr>
         <p>More than 200 real estate professionals attended Ariel Property Advisors' panel presentation on Value-Added Opportunities in the NYC Multifamily Market at the recent NYC Real Estate Expo. Close to 3,000 individuals attended this year's expo, which was held on October 18 at Columbia University...</p>
         <a href="ARIEL.PDF" target="_blank">
