--- a/about.html
+++ b/about.html
@@ -77,10 +77,10 @@
       <p class="subtitle">Adam Verner</p>
       <hr class="subtitle-hr">
       <div class="col-xs-12">
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-xl-center colfixleft">
           <img class="media-fw portrait" src="img/portrait.png">
         </div>
-        <div class="col-sm-9">
+        <div class="col-sm-9 colfixleft">
           <p class="text-3">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.
             <br>
             <br>Since its inception in 2010, Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors. Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American,
