--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
       <p class="subtitle">Adam Verner</p>
       <hr class="subtitle-hr">
       <div class="col-xs-12">
-        <div class="col-sm-3 text-xl-center colfixleft">
+        <div class="col-sm-3 text-xl-center colfixleft pr30">
           <img class="media-fw portrait" src="img/portrait.png">
         </div>
         <div class="col-sm-9 colfixleft">
