--- a/bedstuy.html
+++ b/bedstuy.html
@@ -48,7 +48,7 @@
         <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
-        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School, The Culinary Institute and other institutions.</p>
+        <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very attractive investment. That’s why Springhouse identified this Bedford Avenue property in Bedford Stuyvesant, Brooklyn as a great opportunity. It boasts 44 large apartments - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Pratt, Parsons, The New School and other institutions.</p>
         <hr>
         <p>65,000 square feet</p>
         <hr>
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p class="extra-lower">With convenient access to Pratt, Parsons and The New School this 9 story, 65,000 square feet building presents a tremendous opportunity for singles, recent grads and young families.</p>
+            <p class="extra-lower">With convenient access to Pratt, Parsons, and The New School, this 9 story, 65,000 square foot building taps into a significant population of students and recent grads</p>
           </div>
         </div>
         <div class="row">
