--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
   <div class="container-fluid" id="about">
     <div class="row">
-      <div class="col-sm-6 about-text-hold">
+      <div class="col-lg-6 about-text-hold">
         <div class="row">
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 about-img-hold">
+      <div class="col-lg-6 about-img-hold">
         <p class="subtitle invisible-subtitle">Our Story</p>
         <hr class="subtitle-hr invisible-subtitle-hr">
       </div>
@@ -77,10 +77,10 @@
       <p class="subtitle">Adam Verner</p>
       <hr class="subtitle-hr">
       <div class="col-xs-12">
-        <div class="col-sm-3 text-xl-center colfixleft pr30">
+        <div class="col-lg-3 text-xl-center colfixleft pr30">
           <img class="media-fw portrait" src="img/portrait.png">
         </div>
-        <div class="col-sm-9 colfixleft">
+        <div class="col-lg-9 colfixleft">
           <p class="text-3">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.
             <br>
             <br>Since its inception in 2010, Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors. Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American,
