--- a/press.html
+++ b/press.html
@@ -44,7 +44,7 @@
 
   <div class="container-fluid" id="press">
     <div class="row r1">
-      <div class="col-sm-3 no-left">
+      <div class="col-lg-3 no-left">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyNYCLogo.png">
         <hr>
@@ -56,7 +56,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <hr>
         <img class="press-logo" src="img/TheWallStreetJournal.png">
         <hr>
@@ -68,7 +68,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <hr>
         <img class="press-logo" src="img/CommercialObserverLogo.png">
         <hr>
@@ -80,7 +80,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3 no-right">
+      <div class="col-lg-3 no-right">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyLogo.png">
         <hr>
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="row r2">
-      <div class="col-sm-3 no-left">
+      <div class="col-lg-3 no-left">
         <hr>
         <img class="press-logo" src="img/ArielPropertyAdvisorsLogo.png">
         <hr>
@@ -104,7 +104,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <hr>
         <img class="press-logo" src="img/SouthFloridaBusinessJournalLogo.png">
         <hr>
@@ -116,7 +116,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <hr>
         <img class="press-logo" src="img/CurbedMiamiLogo.png">
         <hr>
@@ -128,7 +128,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-sm-3 no-right">
+      <div class="col-lg-3 no-right">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyMiamiLogo.png">
         <hr>
