--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
@@ -57,10 +64,12 @@
     <div class="row home-text">
       <hr class="subtitle-hr home-hr-fix">
       <div class="col-sm-6">
-        <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and development.</p>
+        <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and
+          development.</p>
       </div>
       <div class="col-sm-6">
-        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout New York City and South Florida.</p>
+        <p>Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business. To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout
+          New York City and South Florida.</p>
       </div>
       <!--<div class="col-sm-3">
         <p class="text-xs-left text-uppercase subtitle">Address</p>
