--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         </a>
         <br>
         <p class="email-label">Maintenance and leasing inquiries:</p>
-        <a class="longemail" href="mailto:maintenance@springhousepartners.com">
+        <a href="mailto:maintenance@springhousepartners.com">
           <p><u>maintenance@springhousepartners.com</u></p>
         </a>
         <br>
