--- a/press.html
+++ b/press.html
@@ -50,7 +50,7 @@
 
   <div class="container-fluid" id="press">
     <div class="row r1">
-      <div class="col-lg-3 no-left">
+      <div class="col-md-6 col-lg-3 no-left">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyNYCLogo.png">
         <hr>
@@ -62,7 +62,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3">
+      <div class="col-md-6 col-lg-3">
         <hr>
         <img class="press-logo" src="img/TheWallStreetJournal.png">
         <hr>
@@ -74,7 +74,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3">
+      <div class="col-md-6 col-lg-3">
         <hr>
         <img class="press-logo" src="img/CommercialObserverLogo.png">
         <hr>
@@ -86,7 +86,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3 no-right">
+      <div class="col-md-6 col-lg-3 no-right">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyLogo.png">
         <hr>
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="row r2">
-      <div class="col-lg-3 no-left">
+      <div class="col-md-6 col-lg-3 no-left">
         <hr>
         <img class="press-logo" src="img/ArielPropertyAdvisorsLogo.png">
         <hr>
@@ -110,7 +110,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3">
+      <div class="col-md-6 col-lg-3">
         <hr>
         <img class="press-logo" src="img/SouthFloridaBusinessJournalLogo.png">
         <hr>
@@ -122,7 +122,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3">
+      <div class="col-md-6 col-lg-3">
         <hr>
         <img class="press-logo" src="img/CurbedMiamiLogo.png">
         <hr>
@@ -134,7 +134,7 @@
           <p><u>Read more ></u></p>
         </a>
       </div>
-      <div class="col-lg-3 no-right">
+      <div class="col-md-6 col-lg-3 no-right">
         <hr>
         <img class="press-logo" src="img/RealEstateWeeklyMiamiLogo.png">
         <hr>
