--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
     <div class="row">
       <div class="col-sm-3">
         <p>Springhouse Partners</p>
-        <p>320 Fifth Avenue
+        <a target="_blank" href="https://www.google.com/maps/place/Springhouse+Partners/@40.7475057,-73.9879923,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2590246da5b97:0x9799071f6daa534c!8m2!3d40.7475057!4d-73.9858036"><p>320 Fifth Avenue
           <br>Suite 800
-          <br>New York, NY 10001</p>
+          <br>New York, NY 10001</p></a>
         <a href="tel:+12125966960">
           <p>T: 212 596 6960</p>
         </a>
