--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
     <div class="row r15">
       <p class="subtitle">Adam Verner</p>
       <hr class="subtitle-hr">
-      <div class="col-xs-12">
+      <div class="col-xs-12 xsrp">
         <div class="col-lg-3 text-xl-center colfixleft pr30">
           <img class="media-fw portrait" src="img/portrait.png">
         </div>
-        <div class="col-lg-9 colfixleft">
+        <div class="col-lg-9 colfixleft xsrp">
           <p class="text-3">Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.
             <br>
             <br>Since its inception in 2010, Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors. Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American,
