--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
             <li class="last-ddown"><a href="bedstuy.html">Bed-Stuy</a></li>
           </ul>
         </li>
+        <li class="nav-item hidden-sm-up">
+          <a class="nav-link" href="irvingplace.html">Irving Place</a>
+        </li>
+        <li class="nav-item hidden-sm-up">
+          <a class="nav-link" href="columbiauniversity.html">Columbia University</a>
+        </li>
+        <li class="nav-item hidden-sm-up">
+          <a class="nav-link" href="miamibeach.html">Miami Beach</a>
+        </li>
+        <li class="nav-item hidden-sm-up">
+          <a class="nav-link" href="williamsburg.html">Williamsburg</a>
+        </li>
+        <li class="nav-item hidden-sm-up">
+          <a class="nav-link" href="bedstuy.html">Bed-Stuy</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="press.html">Press</a>
         </li>
