--- a/bedstuy.html
+++ b/bedstuy.html
@@ -85,19 +85,19 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p class="extra-lower">With convenient access to Pratt, Parsons, and The New School, this 9 story, 65,000 square foot building taps into a significant population of students and recent grads</p>
+            <p class="extra-lower">With convenient access to Pratt, Parsons, and The New School, this 9 story, 65,000 square foot building taps into a significant population of students and recent grads.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/A-min.jpg" alt="">
-            <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture</p>
+            <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/Bed-Stuy-Render.png">
-        <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces</p>
+        <p class="case-textblock">Constructed in 2004, the asset features 44 units, all 3 and 4 bedrooms and many with balconies and terraces.</p>
         <img class="img-circle" src="img/BedStuy/circle-min.jpg">
         <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers and young professionals.</p>
       </div>
