--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Columbia/A-min.jpg" alt="">
-            <p>Historic brownstones with period details deliver classic New York charm to tenants</p>
+            <p>Historic brownstones with period details deliver classic New York charm to tenants.</p>
           </div>
         </div>
       </div>
