--- a/irvingplace.html
+++ b/irvingplace.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/facade-min.jpg">
-            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods</p>
+            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods.</p>
           </div>
         </div>
         <div class="row">
@@ -101,9 +101,9 @@
       </div>
       <div class="col-sm-3">
         <img src="img/Irving-Render.png">
-        <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree</p>
+        <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree.</p>
         <img class="img-circle" src="img/Irving/circle-min.jpg">
-        <p class="case-textblock">A vibrant, highly walkable neighborhood with a range of amenities, including the famous greenmarket at Union Square</p>
+        <p class="case-textblock">A vibrant, highly walkable neighborhood with a range of amenities, including the famous greenmarket at Union Square.</p>
       </div>
     </div>
   </div>
