--- a/miamibeach.html
+++ b/miamibeach.html
@@ -87,21 +87,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Miami/facade-min.jpg">
-            <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric boutique hospitality experience catering to a hip, youthful and international clientele</p>
+            <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric boutique hospitality experience catering to a hip, youthful and international clientele.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Miami/A-min.jpg">
-            <p>The new development sits just steps from the Lincoln Road pedestrian mall and its many shops, restaurants and attractions</p>
+            <p>The new development sits just steps from the Lincoln Road pedestrian mall and its many shops, restaurants and attractions.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/Miami-Render.png">
-        <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look</p>
+        <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look.</p>
         <img class="img-circle" src="img/Miami/circle-min.jpg">
-        <p class="case-textblock">A premier destination for younger travelers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix and 24/7 entertainment</p>
+        <p class="case-textblock">A premier destination for younger travelers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix and 24/7 entertainment.</p>
       </div>
     </div>
   </div>
